--- a/src/templates/sections/simulation.liquid
+++ b/src/templates/sections/simulation.liquid
@@ -17,6 +17,7 @@
               <select name="volumne" id="keg_volume">
                 <option value="20">20L</option>
                 <option value="30">30L</option>
+                <option value="50">50L</option>
               </select>
             </label>
             <label for="glasses_volume" class="sm-mgb-3 md-mgb-0 md-mgr-2 pgh-1 sm-size-100p md-size-25p">
