--- a/src/templates/sections/contact.liquid
+++ b/src/templates/sections/contact.liquid
@@ -9,29 +9,29 @@
       <h3 class="no-margin fz-18 lh-1_2 fw-700 sm-mgb-2 md-mgb-3">{{contact.direct.title}}</h3>
       <p class="no-margin fz-14 lh-1_8"><a class="no-underline" href="{{contact.direct.phone_link}}">{{contact.direct.phone}}</a></p>
       <p class="no-margin fz-14 lh-1_8"><a class="no-underline" href="{{contact.direct.mail_link}}">{{contact.direct.mail}}</a></p>
-    </div>
-    <div class="sm-column-12 md-column-6 sm-mgt-5 md-mgt-0">
-      <h3 class="no-margin fz-18 lh-1_2 fw-700 sm-mgb-2 md-mgb-3">{{contact.social.title}}</h3>
+      <h3 class="no-margin fz-18 lh-1_2 fw-700 sm-mgb-2 md-mgb-3 sm-mgt-4 md-mgt-10">{{contact.social.title}}</h3>
       <div class="flex sm-layout-row md-layout-column">
-        <a href="{{contact.social.facebook}}" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
+        {% comment %} <a href="{{contact.social.facebook}}" target="_blank" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
           <div class="w-5 h-5 bg-yellow round flex align-center-center sm-mgr-4 md-mgr-2"><svg class="w-3 h-3"><use xlink:href="#icon-facebook" /></svg></div>
           <span class="sm-dp-none md-dp-inl">Facebook</span>
-        </a>
-        <a href="{{contact.social.linkedin}}" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
+        </a> {% endcomment %}
+        <a href="{{contact.social.linkedin}}" target="_blank" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
           <div class="w-5 h-5 bg-yellow round flex align-center-center sm-mgr-4 md-mgr-2"><svg class="w-3 h-3"><use xlink:href="#icon-linkedin" /></svg></div>
           <span class="sm-dp-none md-dp-inl">Linkedin</span>
         </a>
-        <a href="{{contact.social.instagram}}" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
+        {% comment %} <a href="{{contact.social.instagram}}" target="_blank" class="flex align-start-center no-underline fz-14 lh-1_2 md-mgb-3">
           <div class="w-5 h-5 bg-yellow round flex align-center-center sm-mgr-4 md-mgr-2"><svg class="w-3 h-3"><use xlink:href="#icon-instagram" /></svg></div>
           <span class="sm-dp-none md-dp-inl">Instagram</span>
-        </a>
+        </a> {% endcomment %}
       </div>
-      {% comment %} <form id="contact-form" class="bg-pattern bg-gray sm-pgh-2 sm-pgv-3 md-pg-4">
+    </div>
+    <div class="sm-column-12 md-column-6 sm-mgt-5 md-mgt-0">
+      <form id="contact-form" class="bg-pattern bg-gray sm-pgh-2 sm-pgv-3 md-pg-4">
         <h3 class="no-margin fz-18 lh-1_2 fw-700 mgb-3">Message</h3>
         <label for="function" class="sm-mgb-2 md-mgb-3">
           <div>{{contact.form.function}}</div>
           <select name="function" id="function" required>
-            <option value="Brasseurs/Caviste">Brasseurs/Caviste</option>
+            <option value="Brasseurs/Caviste">Brasseurs/Cavistes</option>
             <option value="Cafés/Hôtels/Restaurants">Cafés/Hôtels/Restaurants</option>
             <option value="Organisateurs d'évènements">Organisateurs d'évènements</option>
             <option value="Stades/Salles">Stades/Salles</option>
@@ -65,7 +65,8 @@
         <div class="flex align-end-center size-100p">
           <button class="button black sm-size-100p md-size-auto disabled">{{contact.form.cta}}</button>
         </div>
-      </form> {% endcomment %}
+      </form>
+      </div>
     </div>
   </div>
 </div>
